temp css fix
Having issues with overlapping divs in safari. For now, fixing with 96% height, but is not as smooth in responsive. Looking for better solution. Functions fine in Chrome and Firefox.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -236,7 +236,7 @@ iframe.data, iframe.data2{
 	margin: 0;
 	position: relative;
 	width: 30%;
-	height: 95.8%;
+	height: 96%;
 	overflow: scroll;
 	-webkit-overflow:  scroll;
 	z-index: -2;
@@ -248,7 +248,7 @@ iframe.data, iframe.data2{
 	padding-left: 1%;
 	padding-right: 1%;
 	width: 65.9%;
-	height: 95.8%;
+	height: 96%;
 	position: relative;
 	overflow: scroll;
 	border-left: thin dashed rgb(255, 255, 255);
@@ -263,7 +263,7 @@ iframe.data, iframe.data2{
 	position: fixed;
 	/*left: 40%;*/
 	overflow: scroll;
-	z-index: -1;
+	z-index: -2;
 	/*border-left: .5px dashed white;*/
 }
 
